--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"express": "^5.1.0",
 		"langchain": "^0.3.32",
 		"vue3-smooth-dnd": "^0.0.6",
-		"zod": "^3.25.76"
+		"zod": "^3.25.76",
+		"dotenv": "^16.0.0"
 	}
 }
