--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-	"name": "recepies-generator",
+	"name": "recipes-generator",
 	"version": "1.0.0",
 	"description": "",
 	"type": "module",
 	"main": "index.js",
+	"engines": {
+		"node": ">=18.0.0"
+	},
 	"scripts": {
 		"start": "node index.js"
 	},
@@ -15,7 +18,6 @@
 		"cors": "^2.8.5",
 		"express": "^5.1.0",
 		"langchain": "^0.3.32",
-		"vue3-smooth-dnd": "^0.0.6",
 		"zod": "^3.25.76",
 		"dotenv": "^16.0.0"
 	}
